# resource-fetcher

./: .actrc  .gitignore  BINARY_GUIDE.md  CLAUDE.md  CONTRIBUTING.md  LICENSE  README.md  WORKSPACE.md  build-all.py  build-gui.py  build.py  pyproject.old.toml  pyproject.toml  resource_fetcher.spec  update_imports.py
.github/: PULL_REQUEST_TEMPLATE.md
.github/workflows/: release.yml
cli/: build.py  pyproject.toml
cli/core/: pyproject.toml
cli/core/src/resource_fetcher_core/adapters/: __init__.py  izanmei.py
cli/core/src/resource_fetcher_core/core/: interfaces.py
cli/core/src/resource_fetcher_core/utils/: http.py
cli/src/resource_fetcher_cli/cli/: main.py  progress_markers.py
docs/: CI_CD.md  test-summary-refactored.md
gui/: README.md  pyproject.toml
gui/cli/: pyproject.toml
gui/cli/core/src/resource_fetcher_core/adapters/: izanmei.py
gui/cli/core/src/resource_fetcher_core/core/: __init__.py
gui/cli/src/resource_fetcher_cli/: __init__.py
gui/src/resource_fetcher_gui/: __init__.py
gui/src/resource_fetcher_gui/gui/: main.py
gui/src/resource_fetcher_gui/gui/core/: cli_wrapper.py
gui/src/resource_fetcher_gui/gui/widgets/: __init__.py  main_window.py
gui/src/resource_fetcher_gui/styles/: __init__.py  style_manager.py  theme_constants.py
scripts/: test-act.sh
src.old/resource_fetcher/: __init__.py
src.old/resource_fetcher/adapters/: izanmei.py  registry.py
src.old/resource_fetcher/cli/: main.py
src.old/resource_fetcher/core/: interfaces.py  models.py
src.old/resource_fetcher/gui/: main.py
src.old/resource_fetcher/gui/core/: cli_wrapper.py  output_parser.py
src.old/resource_fetcher/gui/widgets/: config_widget.py  progress_widget.py
src.old/resource_fetcher/utils/: http.py
src/resource_fetcher/: __init__.py
src/resource_fetcher/adapters/: __init__.py  izanmei.py  registry.py
src/resource_fetcher/cli/: main.py
src/resource_fetcher/core/: __init__.py  interfaces.py  models.py
src/resource_fetcher/gui/: main.py
src/resource_fetcher/gui/core/: config_service.py
src/resource_fetcher/gui/widgets/: __init__.py  main_window.py  status_bar.py
tauri-gui/: .gitignore  README.md  index.html  package-lock.json  package.json  playwright.config.ts  tailwind.config.js  vite.config.ts  vitest.config.ts
tauri-gui/scripts/: build.ps1  build.sh  setup-dev.ps1  setup-dev.sh
tauri-gui/src/: App.tsx  ErrorBoundary.tsx  index.css  main.tsx
tauri-gui/src-tauri/: Cargo.toml  tauri.conf.json
tauri-gui/src-tauri/icons/: icon.icns
tauri-gui/src-tauri/src/: main.rs
tauri-gui/src/components/: Configuration.tsx  LogDisplay.tsx  ProgressDisplay.tsx  UpdateNotification.tsx  UrlInput.tsx
tauri-gui/src/services/: updateService.ts
tauri-gui/tests/: README.md  TEST_REPORT.md  setup.ts
tauri-gui/tests/e2e/: app.spec.ts  test_gui.py  test_gui_simple.py
tauri-gui/tests/integration/: downloadCommands.test.ts
tauri-gui/tests/unit/: App.test.tsx
tests/: README.md
tests/fixtures/html/: izanmei_album.html
tests/gui/: test_cli_wrapper.py  test_config_service.py  test_output_parser.py
tests/integration/: test_download_flow.py  test_renumbering.py
tests/unit/: test_http.py  test_interfaces.py  test_izanmei_adapter.py  test_models.py  test_renumbering.py
