[tool.poetry]
name = "resource-fetcher-core"
version = "0.2.0"
description = "Core library for resource-fetcher - extensible adapter architecture"
authors = ["ChHsiching <hsichingchang@gmail.com>"]
readme = "README.md"
license = "MIT"
packages = [
    { include = "resource_fetcher_core", from = "src" }
]

[tool.poetry.dependencies]
python = "~3.10"
requests = "^2.31.0"
beautifulsoup4 = "^4.12.0"
lxml = "^5.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
